# aqualink-automate

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  404.html  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  build_log.txt  build_output.txt  docker-compose.yml  docker-entrypoint.sh  install-apt.sh  key.gpg  mkdocs.yml  msg_sequence.txt  package.json  playwright.config.ts  sitemap.xml  sonar-project.properties  test_output.txt  tmp_api.json  tmp_aq_panel_h.txt  tmp_aq_programmer_h.txt  tmp_aq_serial_c.txt  tmp_aq_serial_h.txt  tmp_aqualink_h.txt  tmp_color_lights_h.txt  tmp_config_h.txt  tmp_devices_jandy_c.txt  tmp_iaqtouch_h.txt  (+2 more)
src/: CMakeLists.txt  aqualink-automate.cpp  aqualink-automate.h
src/application/: application_defaults.h
src/certificates/: certificate_management.cpp  certificate_management.h  certificate_pemformat.cpp  certificate_pemformat.h  certificate_staticdata.cpp  certificate_staticdata.h
src/concepts/: is_c_array.cpp  is_c_array.h  is_one_of.cpp  is_one_of.h
src/core/: CMakeLists.txt
src/coroutines/: asynchronous_executor.cpp  asynchronous_executor.h  awaitable_signal.cpp  awaitable_signal.h  cancellation_signal.cpp  cancellation_signal.h
src/developer/: asio_tracking.cpp  asio_tracking.h  chrono_clocks.h  firewall_manager.cpp  firewall_manager.h  instance_counter.cpp  instance_counter.h  mock_serial_port.cpp  mock_serial_port.h  serial_port_options.h
src/devices/: device_status.cpp  device_status.h
src/equipment/: equipment_base.cpp  equipment_base.h  equipment_status.h  jandy_equipment.cpp  jandy_equipment.h
src/errors/: error_codes.cpp  error_codes.h  message_error_codes.cpp  message_error_codes.h  protocol_error_codes.cpp  protocol_error_codes.h
src/exceptions/: exception_certificate_invalidformat.cpp  exception_certificate_invalidformat.h  exception_certificate_notfound.cpp  exception_certificate_notfound.h  exception_genericaqualinkexception.cpp  exception_genericaqualinkexception.h  exception_http_duplicateroute.cpp  exception_http_duplicateroute.h  exception_hubnotfound.cpp  exception_hubnotfound.h  exception_notimplemented.cpp  exception_notimplemented.h  exception_optionparsingfailed.cpp  exception_optionparsingfailed.h  exception_options_conflictingoptions.cpp  exception_options_conflictingoptions.h  exception_options_missingdependency.cpp  exception_options_missingdependency.h  exception_optionshelporversion.cpp  exception_optionshelporversion.h  exception_serial_invalidmode.cpp  exception_serial_invalidmode.h  exception_signallingstatscounter_badaccess.cpp  exception_signallingstatscounter_badaccess.h  exception_traits_doesnotexist.cpp  exception_traits_doesnotexist.h  exception_traits_failedtoset.cpp  exception_traits_failedtoset.h  exception_traits_invalidtraitvalue.cpp  exception_traits_invalidtraitvalue.h  exception_traits_notmutable.cpp  exception_traits_notmutable.h  exception_webserver.cpp  exception_webserver.h
src/formatters/: asio_endpoint_formatter.h  beast_stringview_formatter.cpp  beast_stringview_formatter.h  orp_formatter.cpp  orp_formatter.h  ph_formatter.h  temperature_formatter.h  units_dimensionless_formatter.cpp  units_dimensionless_formatter.h  units_electric_potential_formatter.cpp  units_electric_potential_formatter.h  url_segments_encoded_view_formatter.h
src/http/: crow_custom_logger.cpp  crow_custom_logger.h  webroute_equipment.cpp  webroute_equipment.h  webroute_equipment_button.cpp  webroute_equipment_button.h  webroute_equipment_buttons.cpp  webroute_equipment_buttons.h  webroute_equipment_devices.cpp  webroute_equipment_devices.h  webroute_equipment_version.cpp  webroute_equipment_version.h  webroute_index.cpp  webroute_index.h  webroute_jandyequipment.cpp  webroute_jandyequipment.h  webroute_jandyequipment_buttons.cpp  webroute_jandyequipment_buttons.h  webroute_jandyequipment_devices.cpp  webroute_jandyequipment_devices.h  webroute_jandyequipment_stats.cpp  webroute_jandyequipment_stats.h  webroute_jandyequipment_version.cpp  webroute_jandyequipment_version.h  webroute_page_equipment.cpp  webroute_page_equipment.h  webroute_page_index.cpp  webroute_page_index.h  webroute_page_jandyequipment.cpp  webroute_page_jandyequipment.h  webroute_page_version.cpp  webroute_page_version.h  webroute_types.cpp  webroute_types.h  webroute_version.cpp  webroute_version.h  websocket_equipment.cpp  websocket_equipment.h  websocket_equipment_stats.cpp  websocket_equipment_stats.h  (+7 more)
src/interfaces/: ibridge.cpp  ibridge.h  icertificate.cpp  icertificate.h  idevice.cpp  idevice.h  ideviceidentifier.cpp  ideviceidentifier.h  idevicestatus.cpp  idevicestatus.h  iequipment.cpp  iequipment.h  igenerator.cpp  igenerator.h  ihub.cpp  ihub.h  imessage.h  imessagesignal.cpp  imessagesignal.h  imessagesignal_recv.cpp  imessagesignal_recv.h  imessagesignal_send.h  iprofiler.cpp  iprofiler.h  iprofilingunit.cpp  iprofilingunit.h  ipublisher.cpp  ipublisher.h  iserializable.cpp  iserializable.h  iserialport.cpp  iserialport.h  isession.cpp  isession.h  ishareableroute.cpp  ishareableroute.h  istatus.cpp  istatus.h  istatuspublisher.cpp  istatuspublisher.h  (+6 more)
src/jandy/: CMakeLists.txt  jandy.cpp  jandy.h
src/kernel/: auxillary.cpp  auxillary.h  auxillary_base.cpp  auxillary_base.h  auxillary_states.cpp  auxillary_states.h  auxillary_traits.cpp  auxillary_traits.h  auxillary_traits_types.cpp  auxillary_traits_types.h  chlorinator.cpp  chlorinator.h  circulation.h  data_hub.cpp  data_hub.h  data_hub_device_graph.cpp  data_hub_device_graph.h  data_hub_event.cpp  data_hub_event.h  data_hub_event_chemistry.cpp  data_hub_event_chemistry.h  data_hub_event_temperature.cpp  data_hub_event_temperature.h  equipment_hub.cpp  equipment_hub.h  event.cpp  event.h  event_temperature.cpp  event_temperature.h  heater.cpp  heater.h  hub_locator.cpp  hub_locator.h  orp.h  ph.h  pool_configurations.cpp  pool_configurations.h  powercenter.cpp  powercenter.h  preferences_hub.cpp  (+10 more)
test/: .clang-tidy  CMakeLists.txt
(+1962 files in other folders)
